# GeoLOT_Refactor

./: .gitignore  README.md  TODO.md  format.sh  main.py  pyproject.toml
scripts/setup/: download_ford.sh  download_kitti.sh
src/dataset/: base_dataset.py  preprocess_wrapper.py
src/dataset/ford_ha/: config.py  ford.py
src/model/base/: base_encoder_qry.py  base_encoder_ref.py  base_matcher.py  base_model.py
src/model/modules/encoder_qry/: cvgl.py
src/model/modules/encoder_ref/: cvgl.py
src/utils/: camera.py  gps.py  point_pillars.py  pv_to_bev.py  vehicle_pose.py  visualizations.py
src/utils/visualizations/: dataset.py
