[project]
name = "geolot-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "folium>=0.20.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pytorch-lightning>=2.5.5",
    "scipy>=1.16.1",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.1",
    "wandb>=0.21.3",
]

[dependency-groups]
dev = [
    "geolot-new",
    "ipykernel>=6.30.1",
    "ruff>=0.12.12",
]


[tool.ruff]
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # I = import sort rules
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

